Fix bug #47159 - Any SQLite3 statement prepared should be added to the freelist

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@274021 c90b9560-bf6c-de11-be94-00142212c4b1